# datavisual.studio

./: .env.example  .gitignore  ACCESSIBILITY.md  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  DEPLOYMENT.md  DEPLOY_RUNBOOK.md  FEATURE_AUDIT.md  FINAL_BUILD_PLAN.md  GO_LIVE_PLAN.md  HANDOFF.md  IMPROVEMENT_ROADMAP.md  LAUNCH_PLAN.md  LICENSE  Makefile  OVERNIGHT_PLAN.md  OVERNIGHT_PLAN_2.md  OVERNIGHT_PLAN_3.md  PROJECT_AUDIT.md  PROJECT_CONTEXT.md  README.md  SECURITY.md  SHIP_IT_PLAN.md  UI_AUDIT.md  docker-compose.yml  features-workflow  main.py  project-context  pyproject.toml  start.sh
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  __init__.py  alerts.py  analytics.py  answer_guard.py  atomic.py  config.py  council.py  crypto.py  dashboard.py  data_analysis.py  gc.py  gemini.py  main.py  openrouter.py  pdf_export.py  prediction_engine.py  query.py  ratelimit.py  report_builder.py  research.py  ssrf.py  storage.py  users.py
backend/samples/: marketing.csv  saas_revenue.csv  store_sales.csv
backend/tests/: conftest.py  test_alerts.py  test_analytics.py  test_answer_correctness.py  test_api.py  test_assistant.py  test_atomic.py  test_boot_guards.py  test_boot_sweep.py  test_config.py  test_cors_sample_gate.py  test_crypto.py  test_dashboard.py  test_data_analysis.py  test_demo.py  test_export_document.py  test_first_message.py  test_golden_questions.py  (+11 more)
frontend/: .env.local.example  .gitignore  Dockerfile  README.md  middleware.js  next.config.mjs  package-lock.json  package.json  playwright.config.js  vitest.config.mjs  vitest.setup.js
scripts/: backup.sh  restore-test.sh  smoke.mjs
(+117 files in other folders)
