[project]
name = "datavisual-studio-backend"
version = "1.0.0"
description = "Datavisual.studio backend — FastAPI council pipeline with data analysis"
authors = [{name = "Mohammed Isa", email = "mohdisa233@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pandas>=2.3.3",
    "openpyxl>=3.1.5",
    "plotly>=6.8.0",
    "python-multipart>=0.0.32",
    "weasyprint>=69.0",
    "scipy>=1.15.3",
    "xgboost>=3.2.0",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.51",
    "psycopg2-binary>=2.9.12",
    "pymysql>=1.2.0",
    "kaleido>=1.3.0",
    "markdown>=3.10.2",
    "cryptography>=49.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = "-q"
asyncio_mode = "auto"
